--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="NFT MINT LOOP">
-    <meta name="author" content="SnipThinK">
+    <meta name="description" content="Mintloom : Platform Promoting NFT Art in Physical Goods.">
+    <meta name="author" content="MintLoom">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="NFT Arts" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content="NFT Arts "/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="NFT Arts is a new-age system lacking in our society which connects the people and their problems with their local authorities such as the municipal corporation and concerned NGOs and also provides a system to review their work." /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://Mintloom.com/images/header-iphone.png" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:site_name" content="MintLoom" /> <!-- website name -->
+	<meta property="og:site" content="mintloom.com" /> <!-- website link -->
+	<meta property="og:title" content="NFT Art to Physical Goods "/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets" /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="https://Mintloom.com/images/v.gif" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="https://Mintloom.com" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="faq.css">
-
+ 
     <!-- Website Title -->
     <title>NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets
     </title>
