--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="MintLoom" /> <!-- website name -->
 	<meta property="og:site" content="mintloom.com" /> <!-- website link -->
-	<meta property="og:title" content="NFT Art to Physical Goods "/> <!-- title shown in the actual shared post -->
+	<meta property="og:title" content="Mintloom : NFT Arts in Physical Goods "/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="https://Mintloom.com/images/v.gif" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="https://Mintloom.com" /> <!-- where do you want your post to link to -->
