--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="faq.css">
  
     <!-- Website Title -->
-    <title>NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets
+    <title>Mintloom - Transforming NFTs from mere collectibles into cash-flow generating assets
     </title>
     
     <!-- Styles -->
