--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <!-- SEO Meta Tags -->
+    <!-- SEO Meta Tags 
     <meta name="description" content="Mintloom : Platform Promoting NFT Art in Physical Goods.">
     <meta name="author" content="MintLoom">
 
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="MintLoom" /> <!-- website name -->
-	<meta property="og:site" content="mintloom.com" /> <!-- website link -->
-	<meta property="og:title" content="NFT Art to Physical Goods "/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://Mintloom.com/images/v.gif" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="https://Mintloom.com" /> <!-- where do you want your post to link to -->
+ OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ 
+	<meta property="og:site_name" content="MintLoom" /> 
+	<meta property="og:site" content="mintloom.com" /> 
+	<meta property="og:title" content="NFT Art to Physical Goods "/> 
+	<meta property="og:description" content="NFT Arts - Transforming NFTs from mere collectibles into cash-flow generating assets" /> 
+	<meta property="og:image" content="https://Mintloom.com/images/v.gif" /> 
+	<meta property="og:url" content="https://Mintloom.com" /> 
 	<meta property="og:type" content="article" />
-
+    -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -125,6 +125,8 @@
                     <a class="nav-link page-scroll" href="#contact">CONTACT</a>
                 </li>
             </ul>
+
+            <!--
             <span class="nav-item social-icons">
                 <span class="fa-stack">
                     <a href="https://www.disscord.com/mintloom">
@@ -145,7 +147,7 @@
                     </a>
                 </span>
                 
-
+              -->
             </span>
         </div>
     </nav> <!-- end of navbar -->
@@ -823,7 +825,7 @@
                             </li>
                         </ul>
                     </div>
-                </div> <!-- end of col -->
+                </div> <!-- end of col 
                 <div class="col-md-4">
                     <div class="footer-col last">
                         <h4>Social Media</h4>
@@ -848,7 +850,7 @@
                             </a>
                         </span>
                     </div> 
-                </div> <!-- end of col -->
+                </div> end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
